<resources>
    <string name="app_name">CloneMoneyLover</string>
    <string name="title_activity_main">CloneMoneyLover</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    Common use-->
    <string name="string_balance">Balance</string>
    <string name="string_total_balance">Total balance</string>
    <string name="string_currency">₫</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>

    <!--    Navigation bottom bar-->
    <string name="string_home_icon">Home</string>
    <string name="string_transactions_icon">Transactions</string>
    <string name="string_quick_add_icon">Quick add</string>
    <string name="string_setting">Setting</string>
    <string name="string_user_icon">User</string>
    <string name="string_see_all">See all</string>
    <string name="string_see_reports">See reports</string>
    <string name="string_week">Week</string>
    <string name="string_month">Month</string>
    <string name="string_year">Year</string>


    <!--    Home Screen-->
    <string name="string_home_rating">Did you find the Home feature useful to you?</string>
    <string name="string_my_wallets"><b>My Wallets</b></string>
    <string name="string_spending_report">Spending report</string>
    <string name="string_total_spent_month">Total spent this month</string>
    <string name="string_total_spent_week">Total spent this week</string>

    <!--    Transactions screen-->
    <string name="string_dropdown_wallet_description">Select your wallet</string>
    <string name="string_dropdown_wallet_hint">E.g Paying wallet</string>
</resources>